[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/Roboto-Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/Roboto-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/Mine.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Greenhouse.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SolarPanel.png" type="Texture" id=5]
[ext_resource path="res://UI.gd" type="Script" id=6]
[ext_resource path="res://Sprites/OxygenFarm.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Base.png" type="Texture" id=8]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 576.0
script = ExtResource( 6 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 144.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )

[node name="EndTurnButton" type="Button" parent="."]
margin_left = 1072.0
margin_top = 32.0
margin_right = 1272.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 1 )
text = "End Turn"

[node name="TurnText" type="Label" parent="."]
margin_left = 928.0
margin_top = 56.0
margin_right = 1071.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "Turn 257"

[node name="BuildingButtons" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 32.0
margin_right = 404.0
margin_bottom = 107.0
alignment = 1

[node name="BaseButton" type="Button" parent="BuildingButtons"]
margin_right = 76.0
margin_bottom = 75.0
icon = ExtResource( 8 )

[node name="GreenhouseButton2" type="Button" parent="BuildingButtons"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 75.0
icon = ExtResource( 4 )

[node name="MineButton" type="Button" parent="BuildingButtons"]
margin_left = 160.0
margin_right = 236.0
margin_bottom = 75.0
icon = ExtResource( 3 )

[node name="OxygenFarmButton" type="Button" parent="BuildingButtons"]
margin_left = 240.0
margin_right = 316.0
margin_bottom = 75.0
icon = ExtResource( 7 )

[node name="SolarPanelButton" type="Button" parent="BuildingButtons"]
margin_left = 320.0
margin_right = 396.0
margin_bottom = 75.0
icon = ExtResource( 5 )

[node name="HeaderFoodMetal" type="Label" parent="."]
margin_left = 424.0
margin_top = 32.0
margin_right = 506.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Food:
Metal:"
align = 2

[node name="FoodMetalText" type="Label" parent="."]
margin_left = 520.0
margin_top = 32.0
margin_right = 656.0
margin_bottom = 107.0
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "25 (+80)
25 (+80)"

[node name="HeaderOxygenEnergy" type="Label" parent="."]
margin_left = 664.0
margin_top = 32.0
margin_right = 771.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Oxygen:
Energy:"
align = 2

[node name="OxygenEnergyText" type="Label" parent="."]
margin_left = 784.0
margin_top = 32.0
margin_right = 920.0
margin_bottom = 107.0
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "25 (+80)
25 (+80)"

[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="BuildingButtons/BaseButton" to="." method="_on_BaseButton_pressed"]
[connection signal="pressed" from="BuildingButtons/GreenhouseButton2" to="." method="_on_GreenhouseButton_pressed"]
[connection signal="pressed" from="BuildingButtons/MineButton" to="." method="_on_MineButton_pressed"]
[connection signal="pressed" from="BuildingButtons/OxygenFarmButton" to="." method="_on_OxygenFarmButton_pressed"]
[connection signal="pressed" from="BuildingButtons/SolarPanelButton" to="." method="_on_SolarPanelButton_pressed"]
